fix: add z-index to home page header link

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -159,6 +159,7 @@ a:hover {
     justify-content: center;
     width: 100%;
     grid-area: 1 / 2 / 2 / 3;
+    z-index: 10;
 }
 
 .user-container {
